# python_project

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
backtests/: BrownPantherScientist.csv  GreyDolphinFarmer.csv
blockchain/: backtest.pkl
docs/: Makefile  conf.py  example.ipynb  make.bat
src/203_python_project_rc/: python_project.py  utils.py
src/203_python_project_rc/blockchain/: backtest.pkl
src/python_project/: __init__.py  python_project.py  utils.py
src/python_project_raphael_corchia/: __init__.py  python_project.py
tests/: test_python_project.py
