[tool.poetry]
name = "python_project"
version = "0.0.0"
description = "Add feature to pybacktestchain"
authors = ["Raphael Corchia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = ">=1.11,<1.14"
pybacktestchain = "^0.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
