[tool.poetry]
name = "python_project_raphael_corchia"
version = "0.2.6"
description = "Add feature to pybacktestchain"
authors = ["Raphael Corchia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
scipy = ">=1.11,<1.14"
pybacktestchain = "^0.2.1"
python = ">=3.10,<3.13"
numba = "^0.60.0"
streamlit = "^1.41.1"
plotly = "^5.24.1"
gitdb = "4.0.10"
gitpython = "^3.1.44"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]